--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,4 +23,5 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/
+    - lib/assets/images/
+    - lib/assets/audio/
