--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.4
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -23,5 +24,5 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/
-    - lib/assets/audio/
+    - assets/images/
+    - assets/audio/
